Resolve code quality issue